package br.edu.ifsuldeminas.logicaviva.model;

public class Teacher {

    private Integer teacherId;

}
