package br.edu.ifsuldeminas.logicaviva.servlet;

import br.edu.ifsuldeminas.logicaviva.model.User;

public class AuthService {

    public User authenticate(String email, String password) {

    }

}
